# 3d-terrain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  runcmake.bat  vcpkg.json
ext/: KDTree.h
ext/glew-1.10.0/: CMakeLists.txt
ext/glfw/: CMakeLists.txt
include/: application.hpp
include/cgra/: cgra_basic_model.hpp  cgra_geometry.hpp  cgra_gui.hpp  cgra_image.hpp  cgra_mesh.hpp
include/clouds/: cloud_model.hpp
include/mesh/: mesh_deformation.hpp  simplified_mesh.hpp  simplified_mesh_debugging.hpp
include/terrain/: terrain_model.hpp
include/trees/: trees.hpp
include/utils/: aabb_tree.hpp  camera.hpp  intersections.hpp  perlin_noise.hpp  skybox.hpp  texture_loader.hpp
issues/: Optimize_AABB_Tree_for_Spatial_Partitioning.md  refactor-aabb-tree-gpu-partitioning.md
res/: CMakeLists.txt
res/assets/: cliff.mtl  rock.mtl
res/shaders/: color_frag.glsl  color_fs.glsl  color_vert.glsl  color_vs.glsl  skybox.fs.glsl  skybox.vs.glsl  terrain.fs.glsl  terrain.vs.glsl
src/: CMakeLists.txt  Tree.cpp  Tree.hpp  application.cpp  application.hpp  camera.hpp  cloud_model.cpp  cloud_model.hpp  main.cpp  mesh_deformation.hpp  par_for.h  perlin_noise.hpp  simplified_mesh.cpp  simplified_mesh.hpp  terrain_model.cpp  terrain_model.hpp  texture_loader.cpp
src/cgra/: CMakeLists.txt  cgra_basic_model.hpp  cgra_geometry.cpp  cgra_geometry.hpp  cgra_gui.cpp  cgra_gui.hpp  cgra_image.cpp  cgra_image.hpp  cgra_mesh.cpp  cgra_mesh.hpp  cgra_shader.cpp  cgra_shader.hpp  cgra_wavefront.hpp
src/clouds/: CMakeLists.txt  cloud_model.cpp  cloud_model.hpp
src/mesh/: CMakeLists.txt  mesh_deformation.cpp  mesh_deformation.hpp  simplified_mesh.cpp  simplified_mesh.hpp  simplified_mesh_debugging.hpp
src/terrain/: CMakeLists.txt  terrain_model.cpp  terrain_model.hpp
src/trees/: CMakeLists.txt  Tree.cpp  Tree.hpp  trees.cpp  trees.hpp
src/utils/: CMakeLists.txt  aabb_tree.cpp  camera.hpp  intersections.hpp  opengl.hpp  perlin_noise.cpp  perlin_noise.hpp  skybox.cpp  skybox.hpp  texture_loader.cpp  texture_loader.hpp
